--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^5.14.6",
-    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-image": "^3.16.0",
     "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-sass": "^6.16.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "gatsby-v5-source-hygraph": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "sass": "^1.97.3"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
